# Global-Temperature-Analisys

./: .gitignore  pyproject.toml
scripts/data_acquisition/: download_datasheet.sh
